# mobidrom-theme

./: README.md
.devcontainer/: devcontainer.json  install_ckan_dependencies.sh
ckanext-mobidrom-theme/: MANIFEST.in  setup.cfg  test.ini
ckanext-mobidrom-theme/ckanext/mobidrom_theme/: cli.py  helpers.py  plugin.py  views.py
ckanext-mobidrom-theme/ckanext/mobidrom_theme/assets/: script.js  webassets.yml
ckanext-mobidrom-theme/ckanext/mobidrom_theme/logic/: action.py  auth.py  schema.py  validators.py
ckanext-mobidrom-theme/ckanext/mobidrom_theme/templates/: footer.html
ckanext-mobidrom-theme/ckanext/mobidrom_theme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext-mobidrom-theme/ckanext/mobidrom_theme/tests/logic/: test_action.py  test_auth.py  test_validators.py
docker/ckan/images/ckan/2.10/: Dockerfile
docker/mobidp-dev-shell/: Dockerfile
